2021_05_如何基于hexo搭建一个博客系统0508更新

--- a/source/_posts/2021_05_如何基于hexo搭建一个博客系统.md
+++ b/source/_posts/2021_05_如何基于hexo搭建一个博客系统.md
@@ -13,15 +13,29 @@ tags: 教程
 
 首先查阅文档，见：[hexo中文文档](https://hexo.io/zh-cn/docs/)，文档应该会给出快速搭建的说明
 
-全局安装 `hexo`
+1. 全局安装 `hexo`
 
 ```shell
 npm install -g hexo
 ```
-初始化项目
+
+2. 初始化项目
 ```shell
 hexo init xxxx
 cd xxxx
+```
+
+3. 安装依赖
+```shell
+npm install
+# hexo-server 仅用于本地调试，正式环境不需要安装
+npm install hexo-server --save
+```
+
+4. 启动本地调试，测试创建一篇新文章
+```
+hexo s
+hexo new "如何基于hexo搭建一个博客系统"
 ```
 
 
@@ -30,6 +44,7 @@ cd xxxx
 向仓库推送代码后博客立即更新
 
 我使用的代码仓库是 `coding` ，`coding` 仓库有推送代码时会触发的钩子，在这时它能告知我更新当前的项目文件并重新执行 `hexo` 的相关命令
+
 在仓库配置的信息如图所示 ![](coding_webhook.png) 可以看到，在我每次向 `master` 分支推送代码时， `coding` 仓库会向 `https://yzl.xyz/deploy` 发送一条 `post` 请求
 
 于是我们写一个服务端，用于响应这个 `post` 请求，顺便处理博客的更新，另外这个服务端还作会用于静态资源的响应
@@ -42,20 +57,29 @@ cd xxxx
 
 > 这里注意 _config.yml 的配置中 permalink 的值结尾要设置为 .html 方便后续创建静态服务
 
-使用 node 创建服务的最快的方式是用库，原生的模块不好用，而且 api 不好记，于是我们 安装 express 搭建一个非常简单的服务
+使用 `node` 创建服务的最快的方式是用库，原生的模块不好用，而且 api 不好记，于是我们 安装 express 搭建一个非常简单的服务
+
+如下所示：
+
+注意，`4388799_yzl.xyz.key` 和 `4388799_yzl.xyz.pem` 来自阿里云的免费 ssl 证书
 
 
 ```javascript
+const fs = require('fs')
+
 const express = require('express')
 
 const app = express()
 
+// 将 子目录 public 作为静态文件夹
 app.use('/lin/', express.static('./public'))
 
+// 重定向到 /lin 子路由访问博客，也可以不处理根路径
 app.get('/', function(_req, res) {
     res.redirect('/lin')
 })
 
+// 访问 /lin 子路由时，响应博客首页
 app.get('/lin', function(_req, res) {
     res.sendFile(require('path').join(__dirname, './public/index.html'))
 })
@@ -66,17 +90,23 @@ const certificate = fs.readFileSync('./4388799_yzl.xyz.pem', 'utf8')
 
 const credentials = { key: privateKey, cert: certificate }
 
+// 创建 https 服务
 const https = require('https').Server(credentials, app)
 
+// 以 https 的默认端口 443 启动，这样访问页面时不用携带端口号
 https.listen(443, function() {
   console.log('listening on *:443')
 })
 ```
 
+静态资源在每次更新替换后，不需要重启服务器，`express.static` 能根据请求的路由找到 `public` 目录下对应路径的文件
 
-```javascript 响应 coding 的 webhook
+正好，`hexo d` 在做的事情就是更新并替换静态资源
+
+接下来是代码推送后服务端要做的事情，执行 `deploy.sh`，`child_process` 的用法可以参考 `node` 的对应文档
+
+```javascript "响应 coding 的 webhook"
 app.post('/deploy', function(_req, res) {
-    console.log('start')
     const child_process = require('child_process')
     child_process.exec('chmod +x ./deploy.sh')
     child_process.execFile('./deploy.sh', function(error, stdout,  stderr) {
@@ -90,11 +120,13 @@ app.post('/deploy', function(_req, res) {
             console.log(stderr)
         }
     })
-    console.log('end')
     res.end()
 })
 ```
 
+在 `deploy.sh` shell 脚本文件中 我们做了三个操作，一是拉取最新的 `master` 分支代码，删除静态资源文件夹，重新运行 `hexo d` 命令
+
+拉取最新的代码后，能获取到最新的文档和配置，删除 `public` 文件夹是为了让 `hexo d` 命令能运行成功，否则它不会基于最新的文档创建静态资源文件
 
 ```shell deploy.sh
 {
@@ -104,3 +136,14 @@ app.post('/deploy', function(_req, res) {
 }
 echo '执行完毕'
 ```
+## 部署
+
+登录阿里云 `ESC 实例`，选择一个恰当的文件夹，克隆本仓库，然后安装 `hexo` 的环境及其依赖项（依次执行**如何开始**章节中的1~3步骤）
+
+```shell
+git clone https://e.coding.net/kawayiLinLin-01/blog/lin-blog.git
+```
+
+基于 `forever` 为 `server.js` 创建一个守护进程
+
+![](foreverexample.jpg)
