2021_05_如何基于hexo搭建一个博客系统0508更新

--- a/source/_posts/2021_05_如何基于hexo搭建一个博客系统.md
+++ b/source/_posts/2021_05_如何基于hexo搭建一个博客系统.md
@@ -20,12 +20,14 @@ npm install -g hexo
 ```
 
 2. 初始化项目
+
 ```shell
 hexo init xxxx
 cd xxxx
 ```
 
 3. 安装依赖
+
 ```shell
 npm install
 # hexo-server 仅用于本地调试，正式环境不需要安装
@@ -33,6 +35,7 @@ npm install hexo-server --save
 ```
 
 4. 启动本地调试，测试创建一篇新文章
+
 ```
 hexo s
 hexo new "如何基于hexo搭建一个博客系统"
@@ -105,7 +108,7 @@ https.listen(443, function() {
 
 接下来是代码推送后服务端要做的事情，执行 `deploy.sh`，`child_process` 的用法可以参考 `node` 的对应文档
 
-```javascript "响应 coding 的 webhook"
+```javascript 响应 coding 的 webhook
 app.post('/deploy', function(_req, res) {
     const child_process = require('child_process')
     child_process.exec('chmod +x ./deploy.sh')
@@ -138,7 +141,7 @@ echo '执行完毕'
 ```
 ## 部署
 
-登录阿里云 `ESC 实例`，选择一个恰当的文件夹，克隆本仓库，然后安装 `hexo` 的环境及其依赖项（依次执行**如何开始**章节中的1~3步骤）
+登录阿里云 `ESC 实例`，选择一个恰当的文件夹，克隆本仓库，然后安装 `hexo` 的环境及其依赖项（依次执行[如何开始](#如何开始)章节中的1~3步骤）
 
 ```shell
 git clone https://e.coding.net/kawayiLinLin-01/blog/lin-blog.git
