查看更多，优化github文章排版

--- a/source/_posts/2021_05_如何解决-github-访问慢的问题.md
+++ b/source/_posts/2021_05_如何解决-github-访问慢的问题.md
@@ -14,6 +14,8 @@ tags:
 
 假如解析出的 `IP` 有问题，或者解析的过程有问题，那么自然访问不了这个域名
 
+<!-- more -->
+
 由于 `GitHub` 的加速分发 [CDN](https://baike.baidu.com/item/CDN) 域名 [assets-cdn.github.com](assets-cdn.github.com) 遭到 [DNS 污染](https://baike.baidu.com/item/DNS%E6%B1%A1%E6%9F%93)，导致我们无法连接使用 GitHub 的加速分发服务器，才使得中国大陆访问速度很慢。
 
 ## 如何解决慢的问题
@@ -37,25 +39,25 @@ tags:
 
 + Windows 系统：
 
-打开资源管理器，进入如下路径 `C:\Windows\System32\drivers\etc`
+  打开资源管理器，进入如下路径 `C:\Windows\System32\drivers\etc`
 
-![](hosts-file-location-example.png)
+  ![](hosts-file-location-example.png)
 
-红色框所示的文件就是我们要修改的配置文件，这个文件默认是不能修改的，需要先编辑一下它的控制权限
+  红色框所示的文件就是我们要修改的配置文件，这个文件默认是不能修改的，需要先编辑一下它的控制权限
 
-右键，选择属性，切换到 `安全` 标签，点击编辑，编辑当前登录的用户对 hosts 文件的控制权限，`完全控制`（最好是`写入`，避免有恶意程序破坏 `hosts` 文件）打钩
+  右键，选择属性，切换到 `安全` 标签，点击编辑，编辑当前登录的用户对 hosts 文件的控制权限，`完全控制`（最好是`写入`，避免有恶意程序破坏 `hosts` 文件）打钩
 
-![](edit-control.png)
+  ![](edit-control.png)
 
-之后通过记事本或者命令行打开该文件进行编辑
+  之后通过记事本或者命令行打开该文件进行编辑
 
-![](hosts-file-content.png)
+  ![](hosts-file-content.png)
 
-如上图，左侧写 `IP`，空格写对应的域名，之后保存文件，浏览器中新建一个窗口访问刚配置的域名
+  如上图，左侧写 `IP`，空格写对应的域名，之后保存文件，浏览器中新建一个窗口访问刚配置的域名
 
 + Mac 系统：
 
-待更新
+  待更新
 
 ## 其他访问方式
 
