更新 mac 的编辑 hosts 文件的方法

--- a/source/_posts/2021_05_如何解决-github-访问慢的问题.md
+++ b/source/_posts/2021_05_如何解决-github-访问慢的问题.md
@@ -57,8 +57,17 @@ tags:
 
 + Mac 系统：
 
-  待更新
+  打开终端，输入如下命令，可能需要加上 sudo，即 `sudo vi /etc/hosts`
 
+  ![](mac-expample-open-file.jpg)
+
+  对 `hosts` 文件进行编辑
+
+  ![](mac-edit-file.jpg)
+
+  `Esc`, `:` 和 `q` 保存
+
+  浏览器新建一个窗口访问刚配置的域名
 ## 其他访问方式
 
 + 通过镜像访问
