更新TS技巧文章

--- a/source/_posts/2021_06_几个提高开发效率的-TS-小技巧.md
+++ b/source/_posts/2021_06_几个提高开发效率的-TS-小技巧.md
@@ -175,6 +175,90 @@ declare const $: JQueryStatic
 type DateArray = [Date, Date]
 // 可为空
 type DateArray1 = [Date | undefined, Date]
-// 或
+// 或直接在可为空的元素后面加 ?
 type DateArray2 = [Date?, Date?]
 ```
+
+## 函数类型中的参数关系限定
+
+```ts
+// 如果 a 为 1 的时候，b 必须 传 '1'，a 为 2，b 必须传 2
+// 这样写无法限定两者的关系
+function a(a: 1 | 2, b: '1' | '2') {
+    // xxx
+}
+// 可以利用重载
+function a(a: 1, b: '1'): void
+function a(a: 2, b: '2'): void
+function a(a: 1 | 2, b: '1' | '2'): void {}
+// 也可以利用泛型
+interface BType {
+    1: '1'
+    2: '2'
+}
+// 只有在泛型中使用 extends 约束，并且 a 和 b 确实有某种关系，才能在 a 为特定类型的时候，约束 b 的类型
+function b<AType extends keyof BType>(a: Atype, b: BType[AType]): void {}
+// 或 
+function b<AType extends keyof BType>(a: Atype, b: AType extends '1' ? BType['1'] : BType['2']): void {}
+// 你也可以用上述两种方式来声明参数与返回值的对应关系，泛型与 extends 的特性也可以用于类的构造器的声明
+// 注意，如果函数只有一个参数，你也可以这样写
+function c({ a, b }: { a: 1; b: '1' } | { a: 2; b: '2' }): void {}
+```
+
+## 如何得到异步函数返回值的具体类型？
+
+```ts
+declare function a(): Promise<{
+    b: 1
+    c: '2'
+}>
+async function b() {
+    // 也就是这个 c 的类型，不调用 a 的情况如何获取呢？
+    const c = await a()
+}
+// 先能获得 Promise 泛型中传入的的类型
+type GetPromiseType<P extends unknown> = P extends Promise<
+  infer Params
+>
+  ? Params
+  : P
+// 这样就能得到了（ReturnType 是自带的工具类型）
+type GetAsyncFunctionReturnType = GetPromiseType<ReturnType<typeof a>>
+```
+
+## 提示找不到具有类型为 "string" 的参数的索引签名
+
+```ts
+const a = {
+    b: 1,
+    c: 2
+}
+let c: string = 'b'
+// 元素隐式具有 "any" 类型，因为类型为 "string" 的表达式不能用于索引类型 "{ b: number; c: number; }"。
+// 在类型 "{ b: number; c: number; }" 上找不到具有类型为 "string" 的参数的索引签名。
+const d = a[c] // 这一行报错
+
+// 这样定义 a 就好了
+const a: { [key: string]: number } = {
+    b: 1,
+    c: 2
+}
+// 如果你的 a 已声明类型了
+interface A {
+    b: number
+    c: number
+}
+const a: A = {
+    b: 1,
+    c: 2
+}
+// 那加在后面也是可以的
+const a: A & { [key: string]: number } = {
+    b: 1,
+    c: 2
+}
+```
+
+## 各种自带的实用工具类型
+
+参考我的这篇文章[深入浅出TS的 Utility Types](https://yzl.xyz/lin/2021/05/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BATS%E7%9A%84Utility-Types/0b5a4c408b0d.html)
