--- a/source/_posts/2021_06_几个提高开发效率的-TS-小技巧.md
+++ b/source/_posts/2021_06_几个提高开发效率的-TS-小技巧.md
@@ -182,26 +182,28 @@ type DateArray2 = [Date?, Date?]
 ## 函数类型中的参数关系限定
 
 ```ts
-// 如果 a 为 1 的时候，b 必须 传 '1'，a 为 2，b 必须传 2
-// 这样写无法限定两者的关系
+/* 如果 a 为 1 的时候，b 必须 传 '1'，a 为 2，b 必须传 2 */
+/*  这样写无法限定两者的关系 */
 function a(a: 1 | 2, b: '1' | '2') {
     // xxx
 }
-// 可以利用重载
+/* 可以利用重载 */
 function a(a: 1, b: '1'): void
 function a(a: 2, b: '2'): void
 function a(a: 1 | 2, b: '1' | '2'): void {}
-// 也可以利用泛型
+/* 也可以利用泛型 */
 interface BType {
     1: '1'
     2: '2'
 }
-// 只有在泛型中使用 extends 约束，并且 a 和 b 确实有某种关系，才能在 a 为特定类型的时候，约束 b 的类型
+/* 只有在泛型中使用 extends 约束，并且 a 和 b 确实有某种关系，才能在 a 为特定类型的时候，约束 b 的类型 */
 function b<AType extends keyof BType>(a: Atype, b: BType[AType]): void {}
-// 或 
+/* 或 */
 function b<AType extends keyof BType>(a: Atype, b: AType extends '1' ? BType['1'] : BType['2']): void {}
-// 你也可以用上述两种方式来声明参数与返回值的对应关系，泛型与 extends 的特性也可以用于类的构造器的声明
-// 注意，如果函数只有一个参数，你也可以这样写
+/* 
+ * 你也可以用上述两种方式来声明参数与返回值的对应关系，泛型与 extends 的特性也可以用于类的构造器的声明
+ * 注意，如果函数只有一个参数，你也可以这样写
+ */
 function c({ a, b }: { a: 1; b: '1' } | { a: 2; b: '2' }): void {}
 ```
 
@@ -262,3 +264,37 @@ const a: A & { [key: string]: number } = {
 ## 各种自带的实用工具类型
 
 参考我的这篇文章[深入浅出TS的 Utility Types](https://yzl.xyz/lin/2021/05/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BATS%E7%9A%84Utility-Types/0b5a4c408b0d.html)
+
+
+## 得到对象类型值类型的联合类型
+
+```ts
+interface A {
+    a: 1
+    b: 2
+    c: '3'
+}
+// 要得到 1 | 2 | '3'
+// 则
+type Values = A[keyof A]
+```
+
+## 如果重新导出一个类型声明
+
+```ts
+// a.ts 文件
+export interface A {
+    a: 1
+    b: '2'
+}
+// index.ts 文件
+// 方式一，重新执行类型别名
+import { A } from './a.ts'
+export type AType = A
+// 方式二
+export { A } from './a.ts'
+// 注：配置了 --isolatedModules 需要这样写
+export type { A } from './a.ts'
+// 方式三
+export * from './a.ts'
+```
