fix:Vue2.0 侦听器模拟实现

--- a/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
+++ b/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
@@ -1,5 +1,5 @@
 ---
-title: vue2.0 侦听器模拟实现
+title: Vue2.0 侦听器模拟实现
 date: 2021-07-15 23:57:03
 category:
   - 技术
@@ -11,7 +11,7 @@ tags:
 
 # Vue2 的 侦听器 模拟实现
 
-## 1.Object.defineProperty 的使用
+## Object.defineProperty 的使用
 
 第一个参数，需要定义属性的对象
 
@@ -159,7 +159,7 @@ console.log(obj.a, a)
 // '123' '123'
 ```
 
-## 2.实现 vue2.0 类似的 observe
+## 实现 vue2.0 类似的 observe
 
 ```js
 // 有这样一个对象
@@ -337,7 +337,7 @@ for (const key in observedObject) {
 
 
 
-## 3.完整代码
+## 完整代码
 
 + 上文中的完整示例代码
 
