fix:Vue2.0 侦听器模拟实现 more

--- a/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
+++ b/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
@@ -23,6 +23,8 @@ tags:
   + 描述符能否改变（能否被Object.defineProperty多次定义），是否能被 delete 操作符删除
   + 默认 false，不可重定义，不可删除
 
+<!-- more -->
+
 ```js
 // =============== 例1 ===============
 const obj = {}
