fix:Vue2.0 侦听器模拟实现  描述优化

--- a/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
+++ b/source/_posts/2021_07_vue2.0-侦听器模拟实现.md
@@ -161,7 +161,7 @@ console.log(obj.a, a)
 // '123' '123'
 ```
 
-## 实现 vue2.0 类似的 observe
+## 实现 Vue2.0 类似的 侦听器
 
 ```js
 // 有这样一个对象
@@ -199,9 +199,9 @@ function update() {
 }
 
 /**
- * 对象监听
- * @param observedObject {object} 需要被观测的对象
- * @param callback {Function} 需要被观测对象属性值发生修改时，触发的回调函数
+ * 对象侦听
+ * @param {object} observedObject  需要被观测的对象
+ * @param {Function} callback 需要被观测对象属性值发生修改时，触发的回调函数
  */
 function observer(observedObject, callback) {
     // 首先判断它是不是对象，如果不是，直接返回它本身
@@ -228,7 +228,7 @@ function observer(observedObject, callback) {
     return observedObject
 }
 
-observe(obj, update)
+observer(obj, update)
 // 接下来对 obj 上的属性进行赋值操作
 // obj.a = 2
 // obj.b = 3
@@ -240,8 +240,8 @@ observe(obj, update)
 我们需要通过一个递归来处理更深层的属性观测
 
 ```js
-// 在 observe 函数的 for 循环内部，最后面加上一个判断
-// 如果 observedObject 的当前属性对应值仍为一个对象，则把它的值作为参数继续调用 observe 函数自身
+// 在 observer 函数的 for 循环内部，最后面加上一个判断
+// 如果 observedObject 的当前属性对应值仍为一个对象，则把它的值作为参数继续调用 observer 函数自身
 for (const key in observedObject) {
     let otherValue = observedObject[key]
 
@@ -357,9 +357,9 @@ function update() {
 }
 
 /**
- * 对象监听
- * @param observedObject {object} 需要被观测的对象
- * @param callback {Function} 需要被观测对象属性值发生修改时，触发的回调函数
+ * 对象侦听
+ * @param {object} observedObject 需要被观测的对象
+ * @param {Function} callback 需要被观测对象属性值发生修改时，触发的回调函数
  */
 function observer(observedObject, callback) {
     // 首先判断它是不是对象，如果不是，直接返回它本身
@@ -457,9 +457,9 @@ function defineObjectObserver(obj, key, otherValue, callback) {
 }
 
 /**
- * 对象监听
- * @param observedObject {object} 需要被观测的对象
- * @param callback {Function} 需要被观测对象属性值发生修改时，触发的回调函数
+ * 对象侦听
+ * @param {object} observedObject 需要被观测的对象
+ * @param {Function} callback 需要被观测对象属性值发生修改时，触发的回调函数
  */
 function observer(observedObject, callback) {
     if (!isObject(observedObject)) return observedObject
