fix: 从零实现一个 Vue3.0 more

--- a/source/_posts/2021_07_从零实现一个-Vue3-0.md
+++ b/source/_posts/2021_07_从零实现一个-Vue3-0.md
@@ -14,7 +14,7 @@ tags:
 - `Vue3` 采用`ts`开发,增强类型检测。 `Vue2` 则采用`flow`
 - `Vue3` 的性能优化，去掉了不常用的 api，支持 tree-shaking, 不使用就不会被打包
 - `Vue2` 后期引入 RFC , 使每个版本改动可控 [rfcs](https://github.com/vuejs/rfcs/tree/master/active-rfcs)
-
+<!-- more -->
 - `Vue3` 劫持数据采用 proxy `Vue2` 劫持数据采用`defineProperty`。 `defineProperty`有性能问题和缺陷
 - `Vue3` 中对模板编译进行了优化，编译时 生成了 Block tree，可以对子节点的动态节点进行收集，可以减少比较，并且采用了 `patchFlag` 标记动态节点
 - `Vue3` 采用 `compositionApi` （组合式）进行组织功能，解决反复横跳，优化复用逻辑 （mixin 带来的数据来源不清晰、命名冲突等）, 相比 `optionsApi` （声明式）类型推断更加方便
