update:从零实现一个 Vue3.0 effect 维护一个栈

--- a/source/_posts/2021_07_从零实现一个-Vue3-0.md
+++ b/source/_posts/2021_07_从零实现一个-Vue3-0.md
@@ -805,7 +805,7 @@ export {
   const person = {
     name: "Lucy",
     age: 22,
-    mather: {
+    mother: {
       name: "Alice",
       age: 48,
     },
@@ -830,7 +830,7 @@ export {
   const person = {
     name: "Lucy",
     age: 22,
-    mather: {
+    mother: {
       name: "Alice",
       age: 48,
     },
@@ -855,7 +855,7 @@ export {
   const person = {
     name: "Lucy",
     age: 22,
-    mather: {
+    mother: {
       name: "Alice",
       age: 48,
     },
@@ -1177,7 +1177,7 @@ function createSetter(isShallow = false) {
   const person = {
     name: "Lucy",
     age: 22,
-    mather: {
+    mother: {
       name: "Alice",
       age: 48,
     },
@@ -1207,7 +1207,71 @@ function createSetter(isShallow = false) {
 
 ![](our-effect-first-test.jpg)
 
-#### 若干bug修复
+#### 若干 bug 修复
+
+1. effect 嵌套调用时，依赖被错误的收集
+
+```html
+<script>
+  // ============ example ============
+  const { reactive, effect } = VueReactivity;
+
+  const person = {
+    name: "Lucy",
+    age: 22,
+    mother: {
+      name: "Alice",
+      age: 48,
+    },
+  };
+
+  const proxyPerson = reactive(person);
+
+  effect(() => {
+    console.log("姓名被触发了", proxyPerson.name);
+    // 在 effect 中使用 effect
+    effect(() => {
+      console.log("年龄被触发了", proxyPerson.age);
+    });
+    console.log("妈妈的年龄被触发了", proxyPerson.mother.age);
+  });
+
+  proxyPerson.name = "Jack";
+
+  proxyPerson.age = 24;
+
+  proxyPerson.mother.age = 50;
+</script>
+```
+
+让我们看看现在的执行结果
+
+![](effect-deep-error-deps.jpg)
+
+以及现在的 effect 缓存
+
+![](effect-error-weakmap.jpg)
+
+回到上面的代码，让我们分析一下，它的执行过程应该是什么样的
+
+外层 effect 首先被调用，proxyPerson.name 被访问，track 函数中参数 target 为 proxyPerson，key 为 name
+
+此依赖项对应外层 effect，接着，内层 effect 被触发，proxyPerson.age 被访问，track 函数中参数 target 为 proxyPerson，key 为 age，此依赖项对应内层 effect
+
+最后是外层 effect 中的剩余逻辑被触发，proxyPerson.mother 被访问，track 函数中参数 target 为 proxyPerson，key 为 mother，
+此依赖项对应外层 effect，proxyPerson.mother.age 被访问，track 函数中参数 target 为 proxyPerson.mother，key 为 age，
+此依赖项对应外层 effect
+
+嵌套关系的 effect，先触发的 effect 最后才执行完逻辑，后触发的 effect 最先执行完逻辑，这满足栈的“先进后出，后进先出”
+
+因此，我们在依赖收集时，需要维护一个关于 effect 的**栈**，利用栈的特点确保 effect 与依赖项的映射关系是正确的
+
+正确的映射关系如下图所示
+
+![](effect-right-weakmap.jpg)
+
+
+
 
 #### 继续验证
 
