update: 用一个命令行编码工具手把手教你怎么发布 npm 包

--- a/source/_posts/2021_09_用一个命令行编码工具手把手教你怎么发布-npm-包.md
+++ b/source/_posts/2021_09_用一个命令行编码工具手把手教你怎么发布-npm-包.md
@@ -526,6 +526,52 @@ base64Str = `data:${mimetype};base64,${base64Str}`
 
 这样就大功告成了！
 
+## 如何把项目发布到 npm 上？
+
+首先你需要一个 npm 账号
+
+注册账号 https://www.npmjs.com/signup
+
+之后在项目中登录 npm 
+
+```shell
+npm login
+```
+
+注意把地址指向 npm 源
+
+如：`nrm use npm` 或 `npm login --registry=https://registry.npmjs.org`
+
+你可以使用
+
+```shell
+npm version patch
+```
+
+创建一个补丁版本，注意这会在本地 git 中创建一个 tag
+
+然后直接发布
+
+```shell
+npm publish --registry=https://registry.npmjs.org
+```
+
+你可以在 package.json 中配置发布前要执行的命令，或者发布后要执行的命令
+
+如：
+
+```json
+{
+    "scripts": {
+        "postpublish": "git push origin master"
+    }
+}
+```
+
+然后进入 https://www.npmjs.com/ 搜索你自己的 package，或者下载 `npm install [your package name]`
+
 ## 其他
+
+调试结束后记得使用 `npm unlink` 解除软链接哦
 
 代码地址：[https://github.com/kawayiLinLin/command-base64-encoding](https://github.com/kawayiLinLin/command-base64-encoding)
